@@ -1,3 +1,3 @@
 SUBDIRS = src doc 
 ACLOCAL_AMFLAGS         = -I config
-EXTRA_DIST = configure reconf ./config/
+EXTRA_DIST = configure autogen.sh doc include
