@@ -1,4 +1,4 @@
 ## Process this file with automake to produce Makefile.in
 
-man_MANS = ccglue.1 ccglue_tracer.1
-EXTRA_DIST = $(man_MANS)
+man_MANS = ccglue.1 ccglue_tracer.1 ccglue.include ccglue_tracer.include
+EXTRA_DIST = Makefile.am Makefile.in
