@@ -57,7 +57,7 @@ not implemented yet.
 .IP
 Report bugs to: Hari Rangarajan <hariranga@users.sourceforge.net>
 .PP
-ccglue  version: 0.4.0
+ccglue  version: 0.6.0
 .SH AUTHORS
  \fB Hari Rangarajan \fR
 .SH "SEE ALSO"
