@@ -1,4 +1,5 @@
 bin_PROGRAMS = ccglue ccglue_tracer
-ccglue_SOURCES = options.cpp cscoperdr.cpp sym_mgr.cpp digraph.cpp main.cpp c_glue.cpp  tag_file_writer.cpp misc_util.cpp debug.cpp memory_file.cpp
-ccglue_tracer_SOURCES = tracer_options.cpp tracer.cpp digraph.cpp debug.cpp 
+ccglue_SOURCES = options.cpp cscoperdr.cpp sym_mgr.cpp digraph.cpp main.cpp c_glue.cpp  tag_file_writer.cpp misc_util.cpp  debug.cpp c_glue.h     digraph.h          options.h  tracer_options.h cscoperdr.h  indexed_fstream.h  sym_mgr.h  tag_file_writer.h  debug.h      misc_util.h        typedefs.h indexed_fstream.hpp
+ccglue_tracer_SOURCES = tracer_options.cpp tracer.cpp digraph.cpp debug.cpp  tracer_options.h tag_db.h tracer_utils.h tracer.h tagfilerdr.h
 AM_CPPFLAGS = -I$(top_srcdir)/include/
+
